{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "pActionMap",
            "id": "14589eaf-605b-4fc5-bf31-12cfe40d3a51",
            "actions": [
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "51e12b17-98a4-49c7-b600-28cfd7a3ddad",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc205d98-d4b3-482e-8927-976a0cb3cce6",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}